Fix dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,9 @@
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: 16px;
 	line-height: 1.5;
+	color: var(--color-text);
 
+	--color-text: #000;
 	--color-border: #f2f2f2;
 	--color-primary: #ac2b37;
 	--color-primary-hover: #b33a45;
@@ -11,8 +13,8 @@
 }
 
 @media (prefers-color-scheme: dark) {
-	body {
-		color: #fff;
+	:root {
+		--color-text: #fff;
 		--color-border: #262626;
 		--color-background: #1a1a1a;
 	}
